# kudegowo

./: .gitignore  MONGODB_SETUP.md  README-nextjs.md  README.md  SETUP_RAILWAY.md  docker-compose.yml  kudegowo-complete-demo.md  package-lock.json  railway.toml
.github/workflows/: deploy-backend.yml
.windsurf/: diagram-platform-c4.md
ai-agent/: Dockerfile  pyproject.toml
ai-agent/src/: __init__.py  config.py  instrument.py  main.py
ai-agent/src/agent/: llm_client.py  memory.py  orchestrator.py  tools.py
ai-agent/src/routers/: chat.py  health.py
archived/react-frontend-legacy/: package-lock.json  package.json
backend/: .env.example  Dockerfile  health.js  package-lock.json  package.json  server.js
backend-nestjs/: .env.example  package-lock.json  package.json  tsconfig.json
backend-nestjs/src/: app.module.ts  main.ts
backend-nextjs/: package-lock.json
backend-nextjs/models/: PaymentItem.js  Transaction.js
backend-nextjs/routes/: auth.js  payments.js
backend/middleware/: auth.js  errorHandler.js  rateLimiter.js  validate.js
backend/models/: Achievement.js  Attendance.js  CanteenTransaction.js  Child.js  DietaryPreference.js  EmergencyAlert.js  FeeCategory.js  KudiCoin.js  (+10 more)
docs/: c4-architecture.md  feature-repository-mapping.md  talking-points-chrisland.md  talking-points-generic.md  talking-points-riverside.md
frontend/: Dockerfile  package-lock.json  package.json
openspec/: config.yaml
worker/: Dockerfile  celerybeat-schedule  pyproject.toml
worker/src/: __init__.py  celery_app.py  config.py  instrument.py
worker/src/tasks/: notification.py  payment.py  reports.py  scheduled.py
(+286 files in other folders)
