[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kudegowo-worker"
version = "0.1.0"
description = "Celery worker for KudEgOwo background tasks"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pymongo>=4.6.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sentry-sdk[celery]>=1.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-celery>=0.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
